# Where-is-my-money

./: .env  .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
auth/: auth.py  database.py  manager.py
migrations/: env.py
migrations/versions/: 077a613eadcd_made_authorization.py  09-05-2023_1c040aafc352_add_data_in_table_operations.py  09-05-2023_a77c9cc26bba_add_operation.py  128639addd88_delete_role.py  27fc5c98a9d4_change_types.py  457ffa945bc1_initial.py  4c5945a2ef18_change_table_role.py  5e368853062f_change_tables_add_autoincrement.py  77342828efff_adddd.py  800397b4740e_add_token_in_table.py  8a5ef05984a0_add_show_database.py  99ab950256f6_change.py  a5b5ca872907_add_data_in_table.py  aba89db5bfe0_change_database_tables.py  bd5f67c10ada_add_optional_columns.py  c1cfc7581bd0_test.py  c449c62e52b4_check.py  d9e9e765a3a7_delete_fields_response.py  e95477699154_add.py  f98c5a960f35_database_creation.py
models/: models.py
src/: config.py  database.py  main.py  router.py
src/auth/: base_config.py  manager.py  models.py  router.py  schemas.py  utils.py
src/operations/: models.py  router.py  schemas.py
