[tool.poetry]
name = "fastapi-train"
version = "0.1.0"
description = ""
authors = ["sblushin"]
readme = "README.md"
packages = [{include = "fastapi_train"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.98.0"}
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
